# Blue

./: Blue.desktop  CMakeLists.txt  README.md  blue.bat  blue.py  blue.sh
debian/: blue.install  changelog  control
